--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -218,9 +218,22 @@ nav li {
 
 /* Tablet Devices - 1024px to 621px */
 
-@media only screen and (max-width: 1024px) and (min-width: 621px) {
+@media only screen and (max-width: 1105px) and (min-width: 621px) {
+    .header {
+      background-position: 30%;
+    }
+    
+    .masthead-text {
+      margin-top: 5rem;
+      margin-right: 2rem;
+      padding: 0.75rem 4rem;
+  }
   
+  .mobile-menu {
+    display: none;
+  }
 }
+
 
 
 
