--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -220,7 +220,13 @@ nav li {
 
 @media only screen and (max-width: 1105px) and (min-width: 621px) {
     .header {
+      padding-top: 0;
+      width: 100%;
       background-position: 30%;
+    }
+    
+    .container {
+      max-width: 100%;
     }
     
     .masthead-text {
